added figure file

--- a/figures/plot_tune_scores_individual_model.ipynb
+++ b/figures/plot_tune_scores_individual_model.ipynb
@@ -46,11 +46,11 @@
    "outputs": [],
    "source": [
     "master = {}\n",
-    "def lr_dict(lr):\n",
+    "def lr_dict(lr, seed):\n",
     "    for val in [True, False]:\n",
     "        master[str(val)] = {}\n",
     "        total = []\n",
-    "        with open('vgg_15_BN_64_con_'+ str(val) + '_lr_' + str(lr) +'_seed_0_scores.csv', newline='') as csvfile:\n",
+    "        with open('vgg_15_BN_64_con_'+ str(val) + '_lr_' + str(lr) +'_seed_' + seed + '_scores.csv', newline='') as csvfile:\n",
     "            reader = csv.reader(csvfile)\n",
     "            keys = next(reader)\n",
     "\n",
@@ -232,44 +232,45 @@
    ],
    "source": [
     "for lr in [0.1, 0.01, 0.001]:\n",
-    "    master = lr_dict(lr)\n",
-    "    \n",
-    "    fig = plt.figure(figsize=(15, 10))\n",
-    "    fig.suptitle('Comparision at ' + str(lr) + ': Real vs Control', fontsize=16)\n",
-    "    real_dict = master['False']\n",
-    "    control_dict = master['True']\n",
+    "    for seed in [0, 1, 2]:\n",
+    "        master = lr_dict(lr)\n",
     "\n",
-    "    gs = gridspec.GridSpec(2, 2)\n",
+    "        fig = plt.figure(figsize=(15, 10))\n",
+    "        fig.suptitle('Comparision at ' + str(lr) + ': Real vs Control', fontsize=16)\n",
+    "        real_dict = master['False']\n",
+    "        control_dict = master['True']\n",
     "\n",
-    "    ax_ul = plt.subplot(gs[0, 0])\n",
-    "    ax_ul.set_title('Accuracy')\n",
-    "    for k, v in real_dict['acc'].items():\n",
-    "        ax_ul.plot(v, label = list(itertools.chain(k.split('_')[:-1])))\n",
-    "    #ax_ul.set_ylim([0, 1])\n",
-    "    #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "        gs = gridspec.GridSpec(2, 2)\n",
     "\n",
-    "    ax_ll = plt.subplot(gs[1, 0])\n",
-    "    ax_ll.set_title('Loss')\n",
-    "    for k, v in real_dict['loss'].items():\n",
-    "        ax_ll.plot(v, label=k)\n",
-    "    #ax_ll.set_ylim([0, 1])\n",
-    "        \n",
-    "    #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "        ax_ul = plt.subplot(gs[0, 0])\n",
+    "        ax_ul.set_title('Accuracy')\n",
+    "        for k, v in real_dict['acc'].items():\n",
+    "            ax_ul.plot(v, label = list(itertools.chain(k.split('_')[:-1])))\n",
+    "        #ax_ul.set_ylim([0, 1])\n",
+    "        #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "\n",
-    "    ax_ur = plt.subplot(gs[0, 1], sharex=ax_ul)\n",
-    "    ax_ur.set_title('Accuracy')\n",
-    "    for k, v in control_dict['acc'].items():\n",
-    "        ax_ur.plot(v, label = list(itertools.chain(k.split('_')[:-1])))\n",
-    "    #ax_ur.set_ylim([0, 1])\n",
-    "    ax_ur.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "        ax_ll = plt.subplot(gs[1, 0])\n",
+    "        ax_ll.set_title('Loss')\n",
+    "        for k, v in real_dict['loss'].items():\n",
+    "            ax_ll.plot(v, label=k)\n",
+    "        #ax_ll.set_ylim([0, 1])\n",
     "\n",
-    "    ax_lr = plt.subplot(gs[1, 1], sharex=ax_ll)\n",
-    "    ax_lr.set_title('Loss')\n",
-    "    for k, v in control_dict['loss'].items():\n",
-    "        ax_lr.plot(v, label=k)\n",
-    "    #ax_lr.set_ylim([0, 1])\n",
-    "    #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
-    "    plt.savefig(w_dir + '/comparison_fig_lr_' + str(lr) + '.png')\n"
+    "        #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "\n",
+    "        ax_ur = plt.subplot(gs[0, 1], sharex=ax_ul)\n",
+    "        ax_ur.set_title('Accuracy')\n",
+    "        for k, v in control_dict['acc'].items():\n",
+    "            ax_ur.plot(v, label = list(itertools.chain(k.split('_')[:-1])))\n",
+    "        #ax_ur.set_ylim([0, 1])\n",
+    "        ax_ur.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "\n",
+    "        ax_lr = plt.subplot(gs[1, 1], sharex=ax_ll)\n",
+    "        ax_lr.set_title('Loss')\n",
+    "        for k, v in control_dict['loss'].items():\n",
+    "            ax_lr.plot(v, label=k)\n",
+    "        #ax_lr.set_ylim([0, 1])\n",
+    "        #ax.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
+    "        plt.savefig(w_dir + '/comparison_fig_lr_' + str(lr) + '.png')\n"
    ]
   },
   {
