--- a/mister_ed/notebooks/tutorial_2.ipynb
+++ b/mister_ed/notebooks/tutorial_2.ipynb
@@ -30,7 +30,9 @@
     "import torch.optim as optim \n",
     "assert torch.__version__[:3] in ['0.3', '0.4']\n",
     "\n",
-    "use_gpu = torch.cuda.is_available() \n"
+    "use_gpu = torch.cuda.is_available() \n",
+    "\n",
+    "use_gpu = False"
    ]
   },
   {
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +99,7 @@
    ],
    "source": [
     "cifar_trainset = cifar_loader.load_cifar_data('train')\n",
-    "model, normalizer = cifar_loader.load_pretrained_cifar_resnet(flavor=20, return_normalizer=True)"
+    "model, normalizer = cifar_loader.load_pretrained_cifar_resnet(flavor=32, return_normalizer=True)"
    ]
   },
   {
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
     "                               'lp_bound': 8.0 / 255,\n",
     "                               'use_gpu': use_gpu})\n",
     "attack_loss = plf.VanillaXentropy(model, normalizer)\n",
-    "attack_object = aar.FGSM(model, normalizer, delta_threat, attack_loss, use_gpu=use_gpu)\n"
+    "attack_object = aar.FGSM(model, normalizer, delta_threat, attack_loss, use_gpu=use_gpu)"
    ]
   },
   {
@@ -132,13 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "attack_kwargs = {'verbose': False} # kwargs to be called in attack_object.attack(...)\n",
     "attack_params = advtrain.AdversarialAttackParameters(attack_object, 0.2, \n",
-    "                                                     attack_specific_params={'attack_kwargs': attack_kwargs})\n"
+    "                                                     attack_specific_params={'attack_kwargs': attack_kwargs})"
    ]
   },
   {
@@ -150,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "experiment_name = 'tutorial_fgsm'\n",
-    "architecture = 'resnet20'\n",
+    "architecture = 'resnet32'\n",
     "training_obj = advtrain.AdversarialTraining(model, normalizer, experiment_name, architecture)"
    ]
   },
@@ -178,28 +180,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1,   100] accuracy: (32.000, 88.000)\n",
-      "[1,   100] loss: 0.024756\n",
-      "[1,   200] accuracy: (32.000, 88.000)\n",
-      "[1,   200] loss: 0.018856\n",
-      "[1,   300] accuracy: (40.000, 100.000)\n",
-      "[1,   300] loss: 0.017817\n",
-      "COMPLETED EPOCH 0001... checkpointing here\n",
-      "[2,   100] accuracy: (48.000, 84.000)\n",
-      "[2,   100] loss: 0.017116\n",
-      "[2,   200] accuracy: (28.000, 100.000)\n",
-      "[2,   200] loss: 0.017184\n",
-      "[2,   300] accuracy: (56.000, 100.000)\n",
-      "[2,   300] loss: 0.016862\n",
-      "COMPLETED EPOCH 0002... checkpointing here\n",
-      "Finished Training\n"
+      "Exception ignored in: <bound method _DataLoaderIter.__del__ of <torch.utils.data.dataloader._DataLoaderIter object at 0x7f47c41f7a58>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 399, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 378, in _shutdown_workers\n",
+      "    self.worker_result_queue.get()\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/multiprocessing/queues.py\", line 337, in get\n",
+      "    return _ForkingPickler.loads(res)\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/site-packages/torch/multiprocessing/reductions.py\", line 151, in rebuild_storage_fd\n",
+      "    fd = df.detach()\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/multiprocessing/resource_sharer.py\", line 58, in detach\n",
+      "    return reduction.recv_handle(conn)\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/multiprocessing/reduction.py\", line 182, in recv_handle\n",
+      "    return recvfds(s, 1)[0]\n",
+      "  File \"/home/joshuacp/anaconda3/lib/python3.6/multiprocessing/reduction.py\", line 153, in recvfds\n",
+      "    msg, ancdata, flags, addr = sock.recvmsg(1, socket.CMSG_LEN(bytes_size))\n",
+      "ConnectionResetError: [Errno 104] Connection reset by peer\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-0eab293e3d64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m training_obj.train(cifar_trainset, 2, train_loss, \n\u001b[1;32m      3\u001b[0m                    \u001b[0mattack_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mattack_params\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                    use_gpu=use_gpu, verbosity='high') \n\u001b[0m",
+      "\u001b[0;32m/tigress/joshuacp/projects/cifar10-human-experiments/mister_ed/adversarial_training.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, data_loader, num_epochs, train_loss, optimizer, attack_parameters, use_gpu, verbosity, starting_epoch, adversarial_save_dir, regularize_adv_scale)\u001b[0m\n\u001b[1;32m    391\u001b[0m                                                      \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m                                                      \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 393\u001b[0;31m                                                      adv_saver)\n\u001b[0m\u001b[1;32m    394\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madv_examples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madv_inputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattack_out\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m                 \u001b[0;31m# Now proceed with standard training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tigress/joshuacp/projects/cifar10-human-experiments/mister_ed/adversarial_training.py\u001b[0m in \u001b[0;36m_attack_subroutine\u001b[0;34m(self, attack_parameters, inputs, labels, epoch_num, minibatch_num, adv_saver)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mparam\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mattack_parameters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m             \u001b[0madv_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 268\u001b[0;31m             \u001b[0madv_inputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madv_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madv_idxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mog_adv_inputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madv_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    269\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m             if (self.verbosity_level >= 1 and\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 4)"
      ]
     }
    ],
@@ -317,21 +334,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
