--- a/mister_ed/notebooks/advtraining_refactor.ipynb
+++ b/mister_ed/notebooks/advtraining_refactor.ipynb
@@ -85,7 +85,7 @@
     "cifar_normer = utils.DifferentiableNormalize(mean=config.CIFAR10_MEANS,\n",
     "                                             std=config.CIFAR10_STDS)\n",
     "\n",
-    "examples, labels = next(iter(val_loader))\n"
+    "examples, labels = next(iter(val_loader))"
    ]
   },
   {
@@ -144,96 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(Post FGSM):  0.0 correct\n",
-      "[1,     1] accuracy: (0.000, 100.000)\n",
-      "[1,     1] loss: 0.001391\n",
-      "(Post FGSM):  0.0 correct\n",
-      "[1,     2] accuracy: (0.000, 100.000)\n",
-      "[1,     2] loss: 0.002157\n",
-      "(Post FGSM):  37.5 correct\n",
-      "[1,     3] accuracy: (37.500, 100.000)\n",
-      "[1,     3] loss: 0.001262\n",
-      "(Post FGSM):  25.0 correct\n",
-      "[1,     4] accuracy: (25.000, 100.000)\n",
-      "[1,     4] loss: 0.001397\n",
-      "(Post FGSM):  12.5 correct\n",
-      "[1,     5] accuracy: (12.500, 100.000)\n",
-      "[1,     5] loss: 0.001979\n",
-      "(Post FGSM):  37.5 correct\n",
-      "[1,     6] accuracy: (37.500, 100.000)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process Process-8:\n",
-      "Process Process-7:\n",
-      "Process Process-6:\n",
-      "Process Process-5:\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "    self.run()\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
-      "  File \"/Library/Python/2.7/site-packages/torch/utils/data/dataloader.py\", line 50, in _worker_loop\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "    r = index_queue.get()\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Library/Python/2.7/site-packages/torch/utils/data/dataloader.py\", line 50, in _worker_loop\n",
-      "  File \"/Library/Python/2.7/site-packages/torch/utils/data/dataloader.py\", line 50, in _worker_loop\n",
-      "    racquire()\n",
-      "  File \"/Library/Python/2.7/site-packages/torch/utils/data/dataloader.py\", line 50, in _worker_loop\n",
-      "KeyboardInterrupt\n",
-      "    r = index_queue.get()\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "    r = index_queue.get()\n",
-      "    r = index_queue.get()\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/queues.py\", line 378, in get\n",
-      "    racquire()\n",
-      "  File \"/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/multiprocessing/queues.py\", line 376, in get\n",
-      "KeyboardInterrupt\n",
-      "    return recv()\n",
-      "    racquire()\n",
-      "  File \"/Library/Python/2.7/site-packages/torch/multiprocessing/queue.py\", line 21, in recv\n",
-      "    buf = self.recv_bytes()\n",
-      "KeyboardInterrupt\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'reload' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-9a3ee6df2f84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# USE A PREBUILT TRAIN LOSS FXN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m train_obj.train(train_loader, 2, train_loss, attack_parameters=[attack_params], verbosity=\"snoop\", \n\u001b[0;32m----> 7\u001b[0;31m                 adversarial_save_dir='foobar', regularize_adv_scale=1.0)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordanm/grad/mister_ed/adversarial_training.pyc\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, data_loader, num_epochs, train_loss, optimizer, attack_parameters, use_gpu, verbosity, starting_epoch, adversarial_save_dir, regularize_adv_scale)\u001b[0m\n\u001b[1;32m    406\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m                 \u001b[0;31m# backward step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m                 \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    409\u001b[0m                 \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/2.7/site-packages/torch/autograd/variable.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m    165\u001b[0m                 \u001b[0mVariable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m         \"\"\"\n\u001b[0;32m--> 167\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    168\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    169\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Python/2.7/site-packages/torch/autograd/__init__.pyc\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(variables, grad_variables, retain_graph, create_graph, retain_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m---> 99\u001b[0;31m         variables, grad_variables, retain_graph)\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9ade17689724>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madvtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclassifier_net\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrain_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madvtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAdversarialTraining\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassifier_net\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcifar_normer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'refactor_test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# USE A PREBUILT TRAIN LOSS FXN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reload' is not defined"
      ]
     }
    ],
@@ -241,11 +163,10 @@
     "reload(advtrain)\n",
     "            \n",
     "classifier_net.train()\n",
-    "train_obj = advtrain.AdversarialTraining(classifier_net, cifar_normer, 'refactor_test', 'resnet32')\n",
+    "train_obj = advtrain.AdversarialTraining(classifier_net, cifar_normer, 'refactor_test', '')\n",
     "train_loss = nn.CrossEntropyLoss() # USE A PREBUILT TRAIN LOSS FXN \n",
     "train_obj.train(train_loader, 2, train_loss, attack_parameters=[attack_params], verbosity=\"snoop\", \n",
-    "                adversarial_save_dir='foobar', regularize_adv_scale=1.0)\n",
-    "\n"
+    "                adversarial_save_dir='foobar', regularize_adv_scale=1.0)"
    ]
   },
   {
@@ -265,21 +186,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
