--- a/figures/sparsity/Sparsity.ipynb
+++ b/figures/sparsity/Sparsity.ipynb
@@ -177,7 +177,47 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "# for ICLR 2019 submission push\n",
+    "\n",
+    "fig = plt.figure(figsize=(8, 8))\n",
+    "gs = gridspec.GridSpec(5, 5)\n",
+    "# worst bird: 7590\n",
+    "#worst boat: 3357\n",
+    "\n",
+    "#best cat: 4106\n",
+    "#best plane:7103\n",
+    "examples = [7103, 4106, 3357, 7590]\n",
+    "im_start = [0, 1, 3, 4]\n",
+    "for i in np.arange(4):\n",
+    "    \n",
+    "    im = mpimg.imread(test_image_dir + '/' + filenames[examples[i]])\n",
+    "    shutil.move(test_image_dir + '/' + filenames[examples[i]], w_dir + '/' + filenames[examples[i]])\n",
+    "    print(filenames[examples[i]])\n",
+    "    ax_c = plt.subplot(gs[im_start[i], :2])\n",
+    "    ax_c.imshow(im)\n",
+    "    ax_c.set_xticks([])\n",
+    "    ax_c.set_yticks([])\n",
+    "    \n",
+    "    ax_r = plt.subplot(gs[im_start[i], 2:])\n",
+    "    ax_r.hist(guesses[examples[i]], bins = np.arange(11) - 0.5, rwidth=0.8, color='black')\n",
+    "    ax_r.set_xlim([-1, 11])\n",
+    "    ax_r.set_ylim([0, 50])\n",
+    "    ax_r.xaxis.set_ticks(np.arange(10))\n",
+    "#     ax_r.set_ylabel('# Guesses')\n",
+    "    ax_r.yaxis.set_label_position(\"right\")\n",
+    "    ax_r.set_xticklabels([])\n",
+    "    \n",
+    "    ax_r.yaxis.tick_right()\n",
+    "    \n",
+    "    if ax_r.is_last_row():\n",
+    "        print('yes')\n",
+    "        ax_r.set_xlabel('Category') # set to count\n",
+    "        ax_r.xaxis.set_ticks(np.arange(10))\n",
+    "        ax_r.set_xticklabels(categories) # set to labels\n",
+    "        plt.xticks(rotation = 45, ha='right')\n",
+    "    \n",
+    "# plt.savefig(os.path.join(w_dir, 'example_histograms.png'), bbox_inches=\"tight\")\n",
+    "# plt.savefig(os.path.join(w_dir, 'example_histograms.pdf'), bbox_inches=\"tight\")"
    ]
   }
  ],
@@ -197,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
