score table done

--- a/figures/generate_score_table.ipynb
+++ b/figures/generate_score_table.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joshuacp/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/home/joshuacp/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +364,7 @@
        "4      0.99454  vgg_15_BN_64   True  0.01     1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1060,7 @@
        "23     1  0.834240  0.838030  0.8535  0.788210  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,11 +1097,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# genereate latex table"
+    "# genereate latex table\n",
+    "\n",
+    "# \\begin{center}\n",
+    "# \\begin{tabular}{ c c c }\n",
+    "#  cell1 & cell2 & cell3 \\\\ \n",
+    "#  cell4 & cell5 & cell6 \\\\  \n",
+    "#  cell7 & cell8 & cell9    \n",
+    "# \\end{tabular}\n",
+    "# \\end{center}\n",
+    "\n",
+    "# score_keys = [col for col in b_df.columns if 'c10' in col]\n",
+    "# print(score_keys)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def insert_str(idx, string, add):\n",
+    "    return string[:idx] + add + string[idx:]\n",
+    "\n",
+    "# recursive function to make \n",
+    "# underscores latex compatible\n",
+    "def fix_underscores(string):\n",
+    "    idx = string.find('_')\n",
+    "    if idx == -1: \n",
+    "        return\n",
+    "    else:\n",
+    "        string = insert_str(string.find('_'), string, '\\\\')\n",
+    "        up_to = string[:string.find('_')+1]\n",
+    "        after = string[string.find('_')+1:]\n",
+    "        if after.find('_') == -1: return up_to+after\n",
+    "        new_string = up_to + fix_underscores(after)\n",
+    "        return new_string\n",
+    "\n",
+    "# print(fix_underscores('c10h_val_loss'))\n",
+    "\n",
+    "\n",
+    "ordered_keys = ['c10h_val_loss', 'c10h_val_acc',\n",
+    "                'c10h_val_c10_loss', 'c10h_val_c10_acc',\n",
+    "                'v4_loss', 'v4_acc','v6_loss', 'v6_acc',               \n",
+    "                'c10_50k_loss', 'c10_50k_acc']\n",
+    "\n",
+    "# print a table give two conditions (epoch, human)\n",
+    "def print_table(b_df, human, epoch):\n",
+    "    for mn in b_df.model_name.unique()[::-1]:\n",
+    "        print('\\\\texttt{'+fix_underscores(mn)+'}', end=' & ')\n",
+    "\n",
+    "        row_select = (b_df.model_name==mn)&(b_df.human==human)&epoch\n",
+    "        row_data = b_df[row_select]\n",
+    "\n",
+    "        for k, key in enumerate(ordered_keys):\n",
+    "            end = ' & '\n",
+    "            if k == len(ordered_keys) - 1: end = ' \\\\\\\\\\n'\n",
+    "\n",
+    "            if (k+1)%2 != 0:\n",
+    "                print(('%.2f' % row_data[key].values[0])[1:], end=' ')\n",
+    "            else:\n",
+    "                acc = row_data[key].values[0]*100\n",
+    "                print(('(%.0f' % acc ) + '\\\\%)', end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l l l l l }\n",
+      "\\multicolumn{6}{c}{Pretrained on \\texttt{CIFAR10}}\\\\\n",
+      "\\hline  \\\\ [-2.2ex]\n",
+      "& c10h val. & c10 val. & c10.1 v4 & c10.1 v6 & c10 50k \\\\\n",
+      "\\hline  \\\\ [-2.1ex]\n",
+      "\\texttt{vgg\\_15\\_BN\\_64} & .78 (94\\%) & .30 (95\\%) & .84 (83\\%) & .79 (85\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{resnext\\_29\\_8x64d} & .44 (96\\%) & .12 (96\\%) & .34 (89\\%) & .34 (89\\%) & .02 (100\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10} & .44 (96\\%) & .15 (96\\%) & .40 (90\\%) & .38 (91\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{resnet\\_basic\\_110} & .78 (94\\%) & .29 (94\\%) & .66 (85\\%) & .74 (85\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10\\_cutout16} & .47 (96\\%) & .12 (97\\%) & .38 (90\\%) & .38 (90\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{densenet\\_BC\\_100\\_12} & .61 (96\\%) & .15 (96\\%) & .51 (88\\%) & .54 (89\\%) & .00 (100\\%) \\\\\n",
+      "\\hline \\\\\n",
+      "\\multicolumn{6}{c}{Fine-tuned on \\texttt{CIFAR10}}\\\\\n",
+      "\\hline  \\\\ [-2.2ex]\n",
+      "& c10h val. & c10 val. & c10.1 v4 & c10.1 v6 & c10 50k \\\\\n",
+      "\\hline  \\\\ [-2.1ex]\n",
+      "\\texttt{vgg\\_15\\_BN\\_64} & .50 (93\\%) & .21 (93\\%) & .66 (82\\%) & .58 (84\\%) & .03 (99\\%) \\\\\n",
+      "\\texttt{resnext\\_29\\_8x64d} & .42 (96\\%) & .11 (96\\%) & .33 (89\\%) & .33 (90\\%) & .02 (100\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10} & .38 (96\\%) & .12 (96\\%) & .38 (89\\%) & .33 (91\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{resnet\\_basic\\_110} & .61 (93\\%) & .24 (93\\%) & .62 (83\\%) & .63 (84\\%) & .04 (99\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10\\_cutout16} & .42 (96\\%) & .11 (96\\%) & .37 (89\\%) & .35 (90\\%) & .00 (100\\%) \\\\\n",
+      "\\texttt{densenet\\_BC\\_100\\_12} & .57 (96\\%) & .14 (96\\%) & .46 (88\\%) & .49 (89\\%) & .00 (100\\%) \\\\\n",
+      "\\hline \\\\\n",
+      "\\multicolumn{6}{c}{Fine-tuned on \\texttt{CIFAR10H}}\\\\\n",
+      "\\hline  \\\\ [-2.2ex]\n",
+      "& c10h val. & c10 val. & c10.1 v4 & c10.1 v6 & c10 50k \\\\\n",
+      "\\hline  \\\\ [-2.1ex]\n",
+      "\\texttt{vgg\\_15\\_BN\\_64} & .35 (93\\%) & .21 (93\\%) & .55 (82\\%) & .48 (85\\%) & .07 (99\\%) \\\\\n",
+      "\\texttt{resnext\\_29\\_8x64d} & .30 (95\\%) & .14 (95\\%) & .39 (88\\%) & .35 (89\\%) & .11 (98\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10} & .27 (96\\%) & .12 (97\\%) & .33 (89\\%) & .30 (91\\%) & .03 (100\\%) \\\\\n",
+      "\\texttt{resnet\\_basic\\_110} & .36 (92\\%) & .24 (92\\%) & .56 (82\\%) & .54 (82\\%) & .23 (93\\%) \\\\\n",
+      "\\texttt{wrn\\_28\\_10\\_cutout16} & .28 (96\\%) & .13 (96\\%) & .37 (88\\%) & .34 (89\\%) & .06 (100\\%) \\\\\n",
+      "\\texttt{densenet\\_BC\\_100\\_12} & .32 (95\\%) & .17 (95\\%) & .40 (87\\%) & .38 (88\\%) & .09 (98\\%) \\\\\n",
+      "\\hline \\\\\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_header = '& c10h val. & c10 val. & c10.1 v4 & c10.1 v6 & c10 50k \\\\\\\\'\n",
+    "\n",
+    "print('\\\\begin{center}')\n",
+    "print('\\\\begin{tabular}{ l l l l l l }')\n",
+    "\n",
+    "print(\"\\multicolumn{6}{c}{Pretrained on \\\\texttt{CIFAR10}}\\\\\\\\\")\n",
+    "print(\"\\hline  \\\\\\\\ [-2.2ex]\")\n",
+    "print(loss_header)\n",
+    "print(\"\\hline  \\\\\\\\ [-2.1ex]\")\n",
+    "\n",
+    "print_table(b_df, False, (b_df.epoch==0))\n",
+    "print(\"\\hline \\\\\\\\\")\n",
+    "\n",
+    "# print(\"[2ex]\")\n",
+    "print(\"\\multicolumn{6}{c}{Fine-tuned on \\\\texttt{CIFAR10}}\\\\\\\\\")\n",
+    "print(\"\\hline  \\\\\\\\ [-2.2ex]\")\n",
+    "print(loss_header)\n",
+    "print(\"\\hline  \\\\\\\\ [-2.1ex]\")\n",
+    "\n",
+    "print_table(b_df, False, (b_df.epoch!=0))\n",
+    "print(\"\\hline \\\\\\\\\")\n",
+    "\n",
+    "# print(\"[2ex]\")\n",
+    "print(\"\\multicolumn{6}{c}{Fine-tuned on \\\\texttt{CIFAR10H}}\\\\\\\\\")\n",
+    "print(\"\\hline  \\\\\\\\ [-2.2ex]\")\n",
+    "print(loss_header)\n",
+    "print(\"\\hline  \\\\\\\\ [-2.1ex]\")\n",
+    "\n",
+    "print_table(b_df, True, (b_df.epoch!=0))\n",
+    "print(\"\\hline \\\\\\\\\")\n",
+    "\n",
+    "print('\\\\end{tabular}')\n",
+    "print('\\\\end{center}')"
    ]
   },
   {
