updated sba script

--- a/predictions/rebuttal_prediction_confidence_distribution.ipynb
+++ b/predictions/rebuttal_prediction_confidence_distribution.ipynb
@@ -39,7 +39,6 @@
     "    return np.around(mat, dp)\n",
     "np.random.seed(0)\n",
     "\n",
-    "\n",
     "potentialPermIdx =  np.arange(10000)\n",
     "print('potential perm idx: {0}'.format(potentialPermIdx[:5]))\n",
     "np.random.shuffle(potentialPermIdx)\n",
@@ -297,23 +296,8 @@
     "actualPearson = pearson_fn(actual['probs'], actual['labels'])\n",
     "controlPearson= pearson_fn(control['probs'], control['labels'])\n",
     "print(actualSpearmans.mean(), actualSpearmans[:5], '\\n', \n",
-    "     controlSpearmans.mean(), controlSpearmans[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['lippizaner_s_001706.png', 'wagtail_s_002091.png', 'deer_s_001710.png', 'capreolus_capreolus_s_000529.png', 'emu_s_000246.png']\n"
-     ]
-    }
-   ],
-   "source": [
+    "     controlSpearmans.mean(), controlSpearmans[:5])\n",
+    "\n",
     "differenceS = actualSpearmans - controlSpearmans\n",
     "differenceP = actualPearson - controlPearson\n",
     "indexArray = np.array([0, 1, 3, 9, 12])\n",
